--- a/startbootstrap-grayscale-1.0.2/startbootstrap-grayscale-1.0.2/css/grayscale.css
+++ b/startbootstrap-grayscale-1.0.2/startbootstrap-grayscale-1.0.2/css/grayscale.css
@@ -7,14 +7,24 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: 'Pinyon Script', cursive;
     color: #fff;
-    background-color: #000;
+    background-color: #9eeeee;
 }
 
 html {
     width: 100%;
     height: 100%;
+}
+
+.infoWindow
+{
+
+color: #000000;
+}
+.mapDiv
+{
+    box-shadow: 5px 5px 5px #888888;
 }
 
 h1,
@@ -24,9 +34,8 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
+    font-family: 'Pinyon Script', cursive;
+
     letter-spacing: 1px;
 }
 
@@ -67,6 +76,23 @@ a:focus {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;
+}
+
+.header
+{
+    font-size: 60px;
+}
+
+.Text
+{
+    font-size: 30px;
+
+}
+
+.MapContainer
+{
+    text-align: center;
+
 }
 
 .navbar-custom .navbar-brand {
@@ -138,7 +164,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background: url(../img/Farm.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -153,10 +179,17 @@ a:focus {
 
 .intro .intro-body .brand-heading {
     font-size: 40px;
+
 }
 
-.intro .intro-body .intro-text {
-    font-size: 18px;
+.intro-text
+{
+
+    font-size: 40px;
+}
+
+.intro .intro-body {
+    font-size: 40px;
 }
 
 @media(min-width:767px) {
@@ -169,7 +202,7 @@ a:focus {
         font-size: 100px;
     }
 
-    .intro .intro-body .intro-text {
+    .intro .intro-body {
         font-size: 25px;
     }
 }
