--- a/startbootstrap-grayscale-1.0.2/startbootstrap-grayscale-1.0.2/css/grayscale.css
+++ b/startbootstrap-grayscale-1.0.2/startbootstrap-grayscale-1.0.2/css/grayscale.css
@@ -7,9 +7,10 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Pinyon Script', cursive;
+    font-family: 'Droid Serif', serif;
     color: #fff;
-    background-color: #9eeeee;
+    background-color: #e3fdfa;
+    <!--background-color: #fff; c3fbf4-->
 }
 
 html {
@@ -25,17 +26,33 @@ color: #000000;
 .mapDiv
 {
     box-shadow: 5px 5px 5px #888888;
+    text-align: center;
+    padding: 1px;
+    margin: 0 auto;
+    
+}
+
+
+h2 
+{
+    font-size: 42px;
+    font-family: 'Pinyon Script', cursive;
+    letter-spacing: 1px;
+    color: #757575;
+}
+
+h3 {
+    font-size: 24px;
+    font-family: 'Pinyon Script', cursive;
+    letter-spacing: 1px;
+    color: #757575;
 }
 
 h1,
-h2,
-h3,
 h4,
 h5,
 h6 {
-    margin: 0 0 35px;
     font-family: 'Pinyon Script', cursive;
-
     letter-spacing: 1px;
 }
 
@@ -73,14 +90,17 @@ a:focus {
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    <!--text-transform: uppercase;-->
+    font-family: 'Droid Serif', serif;
+    font-size: 24px;
+    color: #c3fbf4;
     background-color: #000;
 }
 
 .header
 {
-    font-size: 60px;
+    font-size: 42px;
+    color:#757575;
 }
 
 .Text
@@ -92,6 +112,8 @@ a:focus {
 .MapContainer
 {
     text-align: center;
+    background: url(../img/wall2.jpg) no-repeat center;
+    margin: 0 auto;
 
 }
 
@@ -106,7 +128,7 @@ a:focus {
 .navbar-custom .navbar-brand .navbar-toggle {
     padding: 4px 6px;
     font-size: 16px;
-    color: #fff;
+    color: #c3fbf4;
 }
 
 .navbar-custom .navbar-brand .navbar-toggle:focus,
@@ -115,7 +137,7 @@ a:focus {
 }
 
 .navbar-custom a {
-    color: #fff;
+    color: #c3fbf4;
 }
 
 .navbar-custom .nav li.active {
@@ -164,7 +186,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/Farm.jpg) no-repeat bottom center scroll;
+    background: url(../img/main.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -186,6 +208,10 @@ a:focus {
 {
 
     font-size: 40px;
+    color:#66FFFF;
+    font-family: 'Pinyon Script', cursive;
+    
+    
 }
 
 .intro .intro-body {
@@ -199,7 +225,7 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 100px;
+        font-size: 74px;
     }
 
     .intro .intro-body {
@@ -212,11 +238,13 @@ a:focus {
     height: 70px;
     margin-top: 15px;
     padding: 7px 16px;
-    border: 2px solid #fff;
+    border: 0px solid #fff;
     border-radius: 35px;
     font-size: 40px;
     color: #fff;
-    background: 0 0;
+   <!-- background: 0 0;-->
+    background: #fff;
+    <!--background: url(../img/heart.png);-->
     -webkit-transition: background .3s ease-in-out;
     -moz-transition: background .3s ease-in-out;
     transition: background .3s ease-in-out;
@@ -225,7 +253,8 @@ a:focus {
 .btn-circle:hover,
 .btn-circle:focus {
     outline: 0;
-    color: #fff;
+    border: 0px solid #c3fbf4;
+    color: #c3fbf4;
     background: rgba(255,255,255,.1);
 }
 
@@ -248,7 +277,7 @@ a:focus {
 }
 
 @-webkit-keyframes pulse {    
-    0 {
+    0%{
         -webkit-transform: scale(1);
         transform: scale(1);
     }
@@ -282,7 +311,7 @@ a:focus {
 }
 
 .content-section {
-    padding-top: 100px;
+    padding-top: 150px;
 }
 
 .download-section {
@@ -305,7 +334,7 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 150px;
     }
 
     .download-section {
@@ -393,4 +422,60 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+/* RSVP */
+
+.rsvp{
+	text-align:center;
+        font-size: 20px;
+        
+        
+}
+
+.rsvp i{
+	font-size:120px;
+	color:#ed4934;
+}
+
+.rsvp .well{
+	padding:20px;
+        color:#000;
+        background:#B2B2B2;
+        <!--background: url(../img/wall1.png);-->
+}
+
+.rsvp .well p{
+	font-family: 'Droid Serif', serif;
+	font-style:italic;
+	font-size:20px;
+	color:#666;
+	line-height:25px;
+	padding-bottom:20px;
+	text-align:center;
+}
+
+.rsvp .well label{
+	font-weight:normal;
+        font-family: 'Pinyon Script', cursive;
+}
+
+.rsvp .well .btn{
+	text-transform:uppercase;
+	font-weight:bold;
+	font-size:13px;
+        background: #c3fbf4;
+        border-color: #bbf1ea;
+        color:#757575;
+}
+
+.details{
+    color: #000;
+    font-size: 28px; 
+}
+
+.details p{
+    color: #000;
+    font-family: 'Droid Serif', serif;
+    font-size: 16px; 
 }
